@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-05T16:07:14Z",
+  "timestamp" : "2023-08-07T00:39:30Z",
   "count_outdated" : 1369,
   "uniques_outdated" : 328,
-  "count" : 1430,
-  "uniques" : 339,
+  "count" : 1432,
+  "uniques" : 340,
   "views" : [
     {
       "timestamp": "2023-07-24T00:00:00Z",
@@ -73,6 +73,15 @@
       "count": 21,
       "count_minmax": [ 21, 21 ],
       "count_decinc": [ 0, 21 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-08-06T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
