@@ -1,6 +1,6 @@
 {
-  "count": 61,
-  "uniques": 11,
+  "count": 63,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2023-07-24T00:00:00Z",
@@ -40,6 +40,11 @@
     {
       "timestamp": "2023-08-05T00:00:00Z",
       "count": 21,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-08-06T00:00:00Z",
+      "count": 2,
       "uniques": 1
     }
   ]
